<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_principal">

    <fragment
            android:id="@+id/nav_principal"
            android:name="com.layonf.navigationdrawerexample.principal.PrincipalFragment"
            android:label="@string/menu_principal"
            tools:layout="@layout/fragment_principal"/>

    <fragment
            android:id="@+id/nav_servico"
            android:name="com.layonf.navigationdrawerexample.servicos.ServicosFragment"
            android:label="@string/menu_servicos"
            tools:layout="@layout/fragment_servicos"/>

    <fragment
            android:id="@+id/nav_clientes"
            android:name="com.layonf.navigationdrawerexample.clientes.ClientesFragment"
            android:label="@string/menu_clientes"
            tools:layout="@layout/fragment_clientes"/>

    <fragment
            android:id="@+id/nav_contato"
            android:name="com.layonf.navigationdrawerexample.contatos.ContatosFragment"
            android:label="@string/menu_contato"
            tools:layout="@layout/fragment_contatos"/>

    <fragment
            android:id="@+id/nav_sobre"
            android:name="com.layonf.navigationdrawerexample.sobre.SobreFragment"
            android:label="@string/menu_sobre"
            tools:layout="@layout/fragment_sobre"/>

</navigation>